; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_ror_16_r.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_ror_16_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DY = common dso_local global i32 0, align 4
@DX = common dso_local global i32 0, align 4
@CYC_SHIFT = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4
@VFLAG_CLEAR = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4
@CFLAG_CLEAR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_ror_16_r() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* @DY, i32** %1, align 8
  %6 = load i32, i32* @DX, align 4
  %7 = and i32 %6, 63
  store i32 %7, i32* %2, align 4
  %8 = load i32, i32* %2, align 4
  %9 = and i32 %8, 15
  store i32 %9, i32* %3, align 4
  %10 = load i32*, i32** %1, align 8
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @MASK_OUT_ABOVE_16(i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @ROR_16(i32 %13, i32 %14)
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %2, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %39

18:                                               ; preds = %0
  %19 = load i32, i32* %2, align 4
  %20 = load i32, i32* @CYC_SHIFT, align 4
  %21 = shl i32 %19, %20
  %22 = call i32 @USE_CYCLES(i32 %21)
  %23 = load i32*, i32** %1, align 8
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @MASK_OUT_BELOW_16(i32 %24)
  %26 = load i32, i32* %5, align 4
  %27 = or i32 %25, %26
  %28 = load i32*, i32** %1, align 8
  store i32 %27, i32* %28, align 4
  %29 = load i32, i32* %4, align 4
  %30 = load i32, i32* %3, align 4
  %31 = sub nsw i32 %30, 1
  %32 = and i32 %31, 15
  %33 = ashr i32 %29, %32
  %34 = shl i32 %33, 8
  store i32 %34, i32* @FLAG_C, align 4
  %35 = load i32, i32* %5, align 4
  %36 = call i32 @NFLAG_16(i32 %35)
  store i32 %36, i32* @FLAG_N, align 4
  %37 = load i32, i32* %5, align 4
  store i32 %37, i32* @FLAG_Z, align 4
  %38 = load i32, i32* @VFLAG_CLEAR, align 4
  store i32 %38, i32* @FLAG_V, align 4
  br label %45

39:                                               ; preds = %0
  %40 = load i32, i32* @CFLAG_CLEAR, align 4
  store i32 %40, i32* @FLAG_C, align 4
  %41 = load i32, i32* %4, align 4
  %42 = call i32 @NFLAG_16(i32 %41)
  store i32 %42, i32* @FLAG_N, align 4
  %43 = load i32, i32* %4, align 4
  store i32 %43, i32* @FLAG_Z, align 4
  %44 = load i32, i32* @VFLAG_CLEAR, align 4
  store i32 %44, i32* @FLAG_V, align 4
  br label %45

45:                                               ; preds = %39, %18
  ret void
}

declare dso_local i32 @MASK_OUT_ABOVE_16(i32) #1

declare dso_local i32 @ROR_16(i32, i32) #1

declare dso_local i32 @USE_CYCLES(i32) #1

declare dso_local i32 @MASK_OUT_BELOW_16(i32) #1

declare dso_local i32 @NFLAG_16(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
